force-app/main/default/objects/MS_FSM_Data_Validation__c/MS_FSM_Data_Validation__c.object-meta.xml
<CustomObject>
    <description>Purpose is to capture various Data Validation Data Points</description>
    <label>Data Validation</label>
    <nameField>
        <displayFormat>DV-{0000000000}</displayFormat>
        <label>Data Validation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>