force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Asset_Data_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>