force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Captured_with_Attribute_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Captured_with_Attribute_Measurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Captured with Attribute Measurement</label>
    <type>Checkbox</type>
</CustomField>