force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Data_Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Validation_Type__c</fullName>
    <label>Data Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SR26</fullName>
            </value>
            <value>
                <fullName>Work Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>