force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Dispatcher_Notes_480v_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Notes_480v_Troubleshooting__c</fullName>
    <description>Field for notes from dispatcher on question: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</description>
    <label>Dispatcher notes 480-up troubleshooting</label>
    <type>TextArea</type>
</CustomField>