force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Dispatcher_Notes_Current_Lgen_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Notes_Current_Lgen_Status__c</fullName>
    <description>Field for notes from dispatcher on question: &quot;What is the current status of the LGen? (Power on / power off, fully assembled / disassembled)&quot;</description>
    <label>Dispatcher Notes Current Lgen Status</label>
    <type>TextArea</type>
</CustomField>