force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Dispatcher_Notes_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Notes_Next_Steps__c</fullName>
    <description>Field for dispatcher notes on question: &quot;What are the next steps after troubleshooting or before starting LGen?&quot;</description>
    <label>Dispatcher Notes Next Steps</label>
    <type>TextArea</type>
</CustomField>