force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Dispatcher_Notes_OK_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Notes_OK_To_Start__c</fullName>
    <description>Field for dispatcher notes on question: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</description>
    <label>Dispatcher Notes OK to Start</label>
    <type>TextArea</type>
</CustomField>