force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Disposition_v_bands__c.field-meta.xml
<CustomField>
    <fullName>Disposition_v_bands__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose of this field is to capture the task of validating v-bands for a related Work Order, Work Order Line Item and Asset</description>
    <label>Disposition v-bands</label>
    <type>Checkbox</type>
</CustomField>