force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Method_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Creation__c</fullName>
    <description>Records which automated flow the data validation was created from, such as SR26, LOTO 480-up</description>
    <label>Method of Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOTO 480-up</fullName>
            </value>
            <value>
                <fullName>SR26</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>