force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_CO_in_PPM__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_CO_in_PPM__c</fullName>
    <label>CO in PPM</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>