force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_ETS_or_PCAP_Graphite_Inspection__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_ETS_or_PCAP_Graphite_Inspection__c</fullName>
    <label>ETS or PCAP Graphite Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>