force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_EXH_Manifold_Seal_Inspection__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EXH_Manifold_Seal_Inspection__c</fullName>
    <label>EXH Manifold Seal Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>