force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_Is_Seg_1_90_deg_Measured__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Is_Seg_1_90_deg_Measured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Segment 1 (90 deg) Measured</label>
    <type>Checkbox</type>
</CustomField>