force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Notes__c</fullName>
    <description>Notes for data validation record</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>