force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_O2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_O2_Percentage__c</fullName>
    <label>O2 Percentage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>