force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_Package__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Data Validations (Package)</relationshipLabel>
    <relationshipName>Data_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>