force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/MS_FSM_Start_of_Emissions_Measurement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Start_of_Emissions_Measurement__c</fullName>
    <label>Start of Emissions Measurement</label>
    <type>DateTime</type>
</CustomField>