force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Piston_Hole_Number__c.field-meta.xml
<CustomField>
    <fullName>Piston_Hole_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piston Hole Number</label>
    <type>Checkbox</type>
</CustomField>