force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Pre_Piston_Removal__c.field-meta.xml
<CustomField>
    <fullName>Pre_Piston_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Piston Removal</label>
    <type>Checkbox</type>
</CustomField>