force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Ring_Break__c.field-meta.xml
<CustomField>
    <fullName>Ring_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ring Break</label>
    <type>Checkbox</type>
</CustomField>