force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Ring_Broken_Segment_Number__c.field-meta.xml
<CustomField>
    <fullName>Ring_Broken_Segment_Number__c</fullName>
    <description>Broken ring segment number - specify segment #1-8</description>
    <label>Ring Broken Segment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>