force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Ring_Side_of_Broken_Segment_Tip__c.field-meta.xml
<CustomField>
    <fullName>Ring_Side_of_Broken_Segment_Tip__c</fullName>
    <description>Enter the side of the broken ring segment. Technicians will need to identify ring segments broken at tip (specify left or right tip)</description>
    <label>Ring Side of Broken Segment Tip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Total Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>