force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Ring_Wear_Measurement_at_0_deg__c.field-meta.xml
<CustomField>
    <fullName>Ring_Wear_Measurement_at_0_deg__c</fullName>
    <description>Ring wear measurement at 0 deg</description>
    <label>Segment 4 - 0deg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>