force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Ring_Wear_Measurement_at_270_deg__c.field-meta.xml
<CustomField>
    <fullName>Ring_Wear_Measurement_at_270_deg__c</fullName>
    <description>Ring Wear Measurement at 270 deg</description>
    <label>Segment 3 - 270deg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>