force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Rings_Labeled__c.field-meta.xml
<CustomField>
    <fullName>Rings_Labeled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rings Labeled</label>
    <type>Checkbox</type>
</CustomField>