force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Rings_Returned_for_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Rings_Returned_for_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rings Returned for Inspection</label>
    <type>Checkbox</type>
</CustomField>