force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Second_Observer__c.field-meta.xml
<CustomField>
    <fullName>Second_Observer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Observer</label>
    <type>Checkbox</type>
</CustomField>