force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Second_Observer_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Observer_Name__c</fullName>
    <label>Second Observer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>