force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/SideOfAllBrokenTips__c.field-meta.xml
<CustomField>
    <fullName>SideOfAllBrokenTips__c</fullName>
    <label>Side Of All Broken Tips</label>
    <length>255</length>
    <type>Text</type>
</CustomField>