force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Response_480v_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Technician_Response_480v_Troubleshooting__c</fullName>
    <description>Field for reply from technician on question: &quot;Did everyone discuss on the phone or in person what troubleshooting steps will be completed with 480 up?&quot;</description>
    <label>Tech response 480-up troubleshooting</label>
    <type>TextArea</type>
</CustomField>