force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Response_Lgen_Assembly_Status__c.field-meta.xml
<CustomField>
    <fullName>Technician_Response_Lgen_Assembly_Status__c</fullName>
    <description>Field for reply from technician on question: &quot;What is the current status of the LGen? (fully assembled / disassembled)&quot;</description>
    <label>Technician Response Lgen Assembly Status</label>
    <type>TextArea</type>
</CustomField>