force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Response_Lgen_Power_Status__c.field-meta.xml
<CustomField>
    <fullName>Technician_Response_Lgen_Power_Status__c</fullName>
    <description>Field for technician&apos;s response to question: &quot;What is the current status of the LGen? (Power on / power off)?</description>
    <label>Technician Response Lgen Power Status</label>
    <type>TextArea</type>
</CustomField>