force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Response_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Technician_Response_Next_Steps__c</fullName>
    <description>Field for reply from technician on question: &quot;What are the next steps after troubleshooting or before starting LGen?&quot;</description>
    <label>Technician Response Next Steps</label>
    <type>TextArea</type>
</CustomField>