force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Response_OK_To_Start__c.field-meta.xml
<CustomField>
    <fullName>Technician_Response_OK_To_Start__c</fullName>
    <description>Field for reply from technician on question: &quot;Communicated &quot;Ok to start&quot; to FOA engineer?&quot;</description>
    <label>Technician Response OK to Start</label>
    <type>TextArea</type>
</CustomField>