force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Technician_Signed__c.field-meta.xml
<CustomField>
    <fullName>Technician_Signed__c</fullName>
    <description>Technician signed for additional approval to acknowledge safety risks</description>
    <label>Technician Signed</label>
    <type>TextArea</type>
</CustomField>