force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Asset_Data_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>