force-app/main/default/objects/MS_FSM_Data_Validation__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipName>Asset_Data_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>